--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -7,7 +7,6 @@
 html {
   scroll-behavior: smooth;
   width: 100%;
-  overflow-x: hidden;
 }
 
 @font-face {
@@ -35,6 +34,15 @@ body {
   color: $black-normal;
   font-size: 1.125rem;
   line-height: 130%;
+}
+
+main {
+  width: 100%;
+}
+
+html,
+body {
+  overflow-x: hidden;
 }
 
 // Responsividade
