--- a/assets/css/elements/_sigam-nos.scss
+++ b/assets/css/elements/_sigam-nos.scss
@@ -20,21 +20,20 @@
   }
 
   .instagram-iframe {
-    position: relative;
     width: 100%;
-    padding-top: 56.25%;
+    max-width: 62.5rem;
+    margin: 0 auto;
 
     > iframe {
       width: 100%;
-      height: auto;
-
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      width: 100%;
-      height: 100%;
+      max-height: 53rem;
+      height: calc(23rem + 45vw);
+      @include responsive(s) {
+        height: calc(23rem + 36vw);
+      }
+      @include responsive(xs) {
+        height: calc(23rem + 8vw);
+      }
     }
   }
 }
